--- a/src/components/bio/index.scss
+++ b/src/components/bio/index.scss
@@ -26,7 +26,7 @@
   .author-name-content {
     padding: 2px 4px;
     font-weight: bolder;
-    background-color: $dimmed-color;
+    background-color: $category-border-color;
     border-radius: 8px;
   }
 
