--- a/src/components/bio/index.scss
+++ b/src/components/bio/index.scss
@@ -10,12 +10,12 @@
     &::before {
       position: absolute;
       z-index: 999;
-      background: url('../../../content/assets/hat.png');
+      background: url('../../../content/assets/crown.png');
       display: inline-block;
       width: 39px;
       background-size: contain;
       height: 39px;
-      content: "";
+      content: '';
       transform: rotate(-27deg);
       top: -6px;
       left: -11px;
