fix: Change asset file path

--- a/src/components/bio/index.scss
+++ b/src/components/bio/index.scss
@@ -10,7 +10,7 @@
     &::before {
       position: absolute;
       z-index: 999;
-      background: url('../../../content/assets/crown.png');
+      background: url('/images/crown.png');
       display: inline-block;
       width: 39px;
       background-size: contain;
